# hal

./: .editorconfig  .gitignore  .travis.yml  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  README.md  build.rs  create-vendored-tar.sh  flake.nix
.rpm/: hal-bitcoin.spec
contrib/: create-vendored-tar.sh
src/: address.rs  ark.rs  bech32.rs  bip32.rs  bip39.rs  block.rs  key.rs  lib.rs  lightning.rs  main.rs  message.rs  miniscript.rs  psbt.rs  serde_utils.rs  tx.rs
src/address/: inspect.rs  mod.rs
src/bip32/: derive.rs  mod.rs
src/cmd/: mod.rs
src/cmd/address/: create.rs  inspect.rs  mod.rs
src/cmd/bip32/: derive.rs  mod.rs
src/cmd/ln/invoice/: decode.rs  mod.rs
src/cmd/psbt/: create.rs  decode.rs  edit.rs  merge.rs
src/cmd/script/: mod.rs
src/cmd/tx/: decode.rs  encode.rs  mod.rs
src/script/: decode.rs  mod.rs
src/tx/: decode.rs  encode.rs  mod.rs
