[package]
name = "hal"
version = "0.8.2"
authors = ["Steven Roose <steven@stevenroose.org>"]
license = "CC0-1.0"
homepage = "https://github.com/stevenroose/hal/"
repository = "https://github.com/stevenroose/hal/"
description = "hal - the Bitcoin companion"
keywords = [ "crypto", "bitcoin" ]
readme = "README.md"

[lib]
name = "hal"
path = "src/lib.rs"

[[bin]]
name = "hal"
path = "src/bin/hal/main.rs"

[dependencies]
clap = "2.32"
log = "0.4.5"
fern = "0.5.6"
chrono = { version = "0.4.6", features = ["serde"] }
rand = "0.4"

base64-compat = "1.0.0"
byteorder = "1.3.1"
serde = { version = "1.0.84", features = [ "derive" ] }
serde_json = "1.0.34"
serde_yaml = "0.8.8"
hex = "0.3.2"

bitcoin = { version = "0.27.0", features = [ "use-serde" ] }
secp256k1 = { version = "0.22.2", features = [ "recovery" ] }
bip39 = { version = "1.0.1", features = [ "all-languages" ] }
lightning-invoice = "0.4.0"
miniscript = { version = "6.0.1", features = ["compiler"] }

# For external commands
jobserver = "0.1.11"
shell-escape = "0.1.4"

[package.metadata.rpm]
package = "hal-bitcoin"

[package.metadata.rpm.cargo]
buildflags = ["--release", "--frozen"]

[package.metadata.rpm.targets]
hal = { path = "/usr/bin/hal" }
