[package]
name = "hal"
version = "0.11.0"
authors = ["Steven Roose <steven@stevenroose.org>"]
license = "CC0-1.0"
homepage = "https://github.com/stevenroose/hal/"
repository = "https://github.com/stevenroose/hal/"
description = "hal - the Bitcoin companion"
keywords = [ "crypto", "bitcoin" ]
readme = "README.md"
edition = "2018"

[lib]
name = "hal"
path = "src/lib.rs"

[[bin]]
name = "hal"
path = "src/bin/hal/main.rs"
required-features = ["cli"]

[features]
default = ["cli"]
cli = ["base64-compat", "clap", "fern", "log", "jobserver", "shell-escape"]

[dependencies]
bitcoin = { version = "0.32.5", features = [ "std", "serde", "rand", "rand-std" ] }
secp256k1 = { version = "0.29", features = [ "recovery" ] }
bip39 = { version = "2.1.0", features = [ "all-languages" ] }
lightning-invoice = { version = "0.33.2", features = [ "std" ] }
miniscript = { version = "12.3.0", features = ["compiler"] }
ark-lib = "0.1.0-beta.3"

byteorder = "1.3.1"
chrono = { version = "0.4.6", features = ["serde"] }
lazy_static = "1.4"
hex = "0.3.2"

serde = { version = "1.0.84", features = [ "derive" ] }
serde_json = "1.0.34"
serde_yaml = "0.8.8"

# for the CLI
base64-compat = { version = "1.0.0", optional = true }
clap = { version = "=2.33.3", optional = true }
fern = { version = "0.5.6", optional = true }
log = { version = "0.4.5", optional = true }

# For external commands
jobserver = { version = "0.1.11", optional = true }
shell-escape = { version = "0.1.4", optional = true }


[package.metadata.rpm]
package = "hal-bitcoin"

[package.metadata.rpm.cargo]
buildflags = ["--release", "--frozen"]

[package.metadata.rpm.targets]
hal = { path = "/usr/bin/hal" }
